--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,29 @@
   margin-top: 1rem;
   margin-left: 0.7rem;
 }
+
+.form {
+  background: white;
+  width: 30%;
+  text-align: center;
+  padding: 1rem;
+  box-shadow: 0px 0px 7px grey;
+}
+
+.form input {
+  margin: 1rem;
+  width: 80%;
+  padding: 10px;
+  outline: none;
+  border: 1px solid grey;
+  border-radius: 5px;
+}
+
+.form button {
+  margin-top: 1rem;
+  padding: 0.3rem 1rem;
+  border-radius: 5px;
+  border: none;
+  font-weight: bold;
+  background: #9d98d0;
+}
