--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,9 @@
   font-family: Montserrat;
   font-weight: 500;
   font-size: 1.4rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   width: 50%;
   background: #ffd88f;
   border-left: 1rem solid #ff183f;
@@ -90,4 +93,16 @@
   display: inline-block;
   background: #2cb1a5;
   padding: 0.7rem 0.5rem;
+}
+
+.btn {
+  margin: 0.6rem;
+  background: #f78048;
+  color: white;
+  font-family: Montserrat;
+  padding: 7px 20px;
+  border: none;
+  border-radius: 5px;
+  transition: 0.3s ease;
+  cursor: pointer;
 }
